java-plugin/src/test/cases/error/ReturnAssignment2-13-16.java
import io.github.miracelwhipp.constness.annotation.Const;
import io.github.miracelwhipp.constness.annotation.ConstMethod;


class ReturnAssignment {

    @Const
    private Object object;

    @ConstMethod
    public Object getObject() {

        return object; // compile error
    }

}